--- a/index.html
+++ b/index.html
@@ -3,31 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Count-Down Timer</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <h1>YOUR BIRTHDAY IS IN</h1>
-    
-    <div class="countdown-container">
-        <div class="countdown-el days-c">
-            <p class="big-text" id="days">0</p>
-            <span>DAYS</span>
-            
-        </div>
-        <div class="countdown-el hours-c">
-            <p class="big-text" id="hours">0</p>
-            <span>HOURS</span>
-        </div>
-        <div class="countdown-el minutes-c">
-            <p class="big-text" id="minutes">0</p>
-            <span>MINUTES</span>
-        </div>
-        <div class="countdown-el seconds-c">
-            <p class="big-text" id="seconds">0</p>
-            <span>SECONDS</span>
-        </div>
+    <h2>ENTER YOUR UPCOMING BIRTHDAY</h2>
+    <div id="container">
+        <input type="date" id="birthday">
+        <button id="btn" onclick="doTask()">Click here to find</button>
     </div>
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
