--- a/second.html
+++ b/second.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <button id="vol" onclick="volume()"><img src="volume.png" alt=""></button>
+    <img src="volume.png" alt="" id="vol" onclick="volume()">
         <h1>YOUR BIRTHDAY IS IN</h1>
         
         <div class="countdown-container">
