Added css to buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>ENTER YOUR UPCOMING BIRTHDAY</h2>
     <div id="container">
         <input type="date" id="birthday">
-        <button id="btn" onclick="doTask()">Click here to find</button>
+        <button id="btn" onclick="doTask()">CLICK HERE</button>
     </div>
     <script src="script.js"></script>
 </body>
